--- a/About page.Rmd
+++ b/About page.Rmd
@@ -127,19 +127,86 @@ Simplified_Joined <- County_enrollment_demographic_data %>%
   select(-"Organ Procurement Organization", 
          -"location", -"chart_month", -"GEOID", 
          -"NAME", -"geometry") %>%
-  rename("Pop_Enrolled" = "% Eligible Population Enrolled") %>%
+  rename("Pop_Enrolled" = "% Eligible Population Enrolled") 
   
   # I made it so only the demographics on white are shown, I could probably do
   # this separately for every race I indicated
   
-  filter(variable == "White") %>%
+ White_Plot <- Simplified_Joined %>%
+   filter(variable == "White") %>%
   mutate(Prop_White = (estimate/summary_est))
 
 
-Simplified_Joined %>%
+White_Plot %>%
+#  filter(Month == "11") %>%
   ggplot(aes(x = Pop_Enrolled, 
              y = fct_reorder(County, Pop_Enrolled), 
              color = Prop_White)) + 
-  geom_point()
+  geom_point(alpha = 0.7) +
+  theme(axis.text.y = element_text(size = 5.5)) +
+    scale_colour_gradient(low = "yellow", high = "red") + 
+  labs(x = "% of Population Registered as an Organ Donor", 
+       y = "County",
+       title = "New York Organ Donation Registration Rates by County in 2015",
+       subtitle = "Registration Rates Measured Monthly",
+       color = "Proportion of Population that is White") 
+  
+```
+
+```{r}
+Black_Plot <- Simplified_Joined %>%
+ filter(variable == "Black") %>%
+  mutate(Prop_Black = (estimate/summary_est))
+
+
+Black_Plot %>%
+  ggplot(aes(x = Pop_Enrolled, 
+             y = fct_reorder(County, Pop_Enrolled), 
+             color = Prop_Black)) + 
+  geom_point(alpha = 0.7) +
+  theme(axis.text.y = element_text(size = 5.5)) +
+  labs(x = "% of Population Registered as an Organ Donor", 
+       y = "County",
+       title = "New York Organ Donation Registration Rates by County in 2015",
+       subtitle = "Registration Rates Measured Monthly",
+       color = "Proportion of Population that is Black") 
+```
+
+```{r}
+Hispanic_Plot <- Simplified_Joined %>%
+ filter(variable == "Hispanic") %>%
+  mutate(Prop_Hispanic = (estimate/summary_est))
+
+
+Hispanic_Plot %>%
+  ggplot(aes(x = Pop_Enrolled, 
+             y = fct_reorder(County, Pop_Enrolled), 
+             color = Prop_Hispanic)) + 
+  geom_point(alpha = 0.7) +
+  theme(axis.text.y = element_text(size = 5.5)) +
+  labs(x = "% of Population Registered as an Organ Donor", 
+       y = "County",
+       title = "New York Organ Donation Registration Rates by County in 2015",
+       subtitle = "Registration Rates Measured Monthly",
+       color = "Proportion of Population that is Hispanic") 
+```
+
+```{r}
+Asian_Plot <- Simplified_Joined %>%
+ filter(variable == "Asian") %>%
+  mutate(Prop_Asian = (estimate/summary_est))
+
+
+Asian_Plot %>%
+  ggplot(aes(x = Pop_Enrolled, 
+             y = fct_reorder(County, Pop_Enrolled), 
+             color = Prop_Asian)) + 
+  geom_point(alpha = 0.7) +
+  theme(axis.text.y = element_text(size = 5.5)) +
+  labs(x = "% of Population Registered as an Organ Donor", 
+       y = "County",
+       title = "New York Organ Donation Registration Rates by County in 2015",
+       subtitle = "Registration Rates Measured Monthly",
+       color = "Proportion of Population that is Asian") 
 ```
 
